# decathlon-demo

./: .gitignore  output.md  pyproject.toml
app/: app.py
